--- a/Single/styles.css
+++ b/Single/styles.css
@@ -4,11 +4,14 @@ body {
 
 body > div > div {
     padding-left: 50px;
-    /* padding-right: 50px; */
 }
 
 span {
 
+}
+
+svg {
+    color: yellow;
 }
 
 .section1 {
@@ -68,7 +71,7 @@ span {
 }
 
 .section3 {
-    height: 900px;
+    height: 952px;
 }
 
 .section3-container {
@@ -84,7 +87,6 @@ span {
 }
     
 .section3-column-small {
-    /* width: 250px; */
     padding-left: 35px;
     padding-right: 50px;
 
@@ -138,48 +140,3 @@ span {
     min-width: 200px;
     text-align: justify;
 }
-
-.section4 {
-    height: 1122px;
-    background: yellow;
-}
-
-.section4-container {
-    display: flex;
-}
-
-.section4-box {
-    height: 500px;
-    width: 300px;
-
-    padding: 15px;
-    margin: 10px;
-    margin-left: 0px;
-
-    background: #EFEFEF;
-}
-
-.section4-box-title {
-    color: #F58A3D;
-}
-
-.section4-box-section {
-
-}
-
-.section4-box-section-title {
-
-}
-
-.section4-box-section-text {
-
-}
-
-.section4-box-section-bar {
-    
-}
-
-.section4-box-section-bar-filled {
-
-}
-
